--- a/projet_python_barnabe.ipynb
+++ b/projet_python_barnabe.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2176,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2186,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -2963,7 +2963,7 @@
        "[25 rows x 25 columns]"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2981,25 +2981,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "echelle = {\"JOLY\": 5, \"LE PEN\" : 10, \"SARKOZY\": 3,\"MÉLENCHON\" : -7 ,\"POUTOU\" : -10,\"ARTHAUD\" : 3,\"CHEMINADE\" : 2,\"BAYROU\" : -2,\"DUPONT-AIGNAN\": 8,\"HOLLANDE\" : 4}"
+    "echelle = {\"JOLY\": -7, \"LE PEN\" : 10, \"SARKOZY\": 6,\"MÉLENCHON\" : -9 ,\"POUTOU\" : -10,\"ARTHAUD\" : -10,\"CHEMINADE\" : -5,\"BAYROU\" : 0,\"DUPONT-AIGNAN\": 8,\"HOLLANDE\" : -4}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "-7"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3017,7 +3017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3039,16 +3039,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.7221000000000006"
+       "2.4876"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3066,7 +3066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3136,8 +3136,7 @@
       "105  SAINT-MARTIN/SAINT-BARTHELEMY\n",
       "106         FRANCAIS DE L'ETRANGER\n",
       "\n",
-      "[107 rows x 1 columns]\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, '2A', '2B', 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 'ZA', 'ZB', 'ZC', 'ZD', 'ZM', 'ZN', 'ZP', 'ZS', 'ZW', 'ZX', 'ZZ']\n"
+      "[107 rows x 1 columns]\n"
      ]
     }
    ],
@@ -3153,7 +3152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3161,67 +3160,67 @@
      "output_type": "stream",
      "text": [
       "                       Departement  indice_tendance\n",
-      "0                              AIN           3.2288\n",
-      "1                            AISNE           3.7111\n",
-      "2                           ALLIER           2.7541\n",
-      "3          ALPES DE HAUTE PROVENCE           2.7745\n",
-      "4                     HAUTES ALPES           2.5877\n",
-      "5                  ALPES MARITIMES           3.6840\n",
-      "6                          ARDECHE           2.7704\n",
-      "7                         ARDENNES           3.6448\n",
-      "8                           ARIEGE           2.4408\n",
-      "9                             AUBE           3.7774\n",
-      "10                            AUDE           3.2619\n",
-      "11                         AVEYRON           2.3844\n",
-      "12                BOUCHES DU RHONE           3.2247\n",
-      "13                        CALVADOS           2.8359\n",
-      "14                          CANTAL           2.8617\n",
-      "15                        CHARENTE           2.9405\n",
-      "16               CHARENTE MARITIME           2.9760\n",
-      "17                            CHER           2.8021\n",
-      "18                         CORREZE           2.9366\n",
-      "19                       CORSE SUD           3.7221\n",
-      "20                     HAUTE CORSE           3.6061\n",
-      "21                       COTE D'OR           3.1762\n",
-      "22                   COTES D'ARMOR           2.4963\n",
-      "23                          CREUSE           2.6974\n",
-      "24                        DORDOGNE           2.6924\n",
-      "25                           DOUBS           3.0531\n",
-      "26                           DROME           3.0712\n",
-      "27                            EURE           3.3421\n",
-      "28                    EURE ET LOIR           3.3330\n",
-      "29                       FINISTERE           2.4133\n",
+      "0                              AIN           1.9692\n",
+      "1                            AISNE           1.9330\n",
+      "2                           ALLIER           0.7043\n",
+      "3          ALPES DE HAUTE PROVENCE           1.0040\n",
+      "4                     HAUTES ALPES           0.8032\n",
+      "5                  ALPES MARITIMES           2.9191\n",
+      "6                          ARDECHE           0.8703\n",
+      "7                         ARDENNES           1.7648\n",
+      "8                           ARIEGE          -0.3798\n",
+      "9                             AUBE           2.6069\n",
+      "10                            AUDE           1.0027\n",
+      "11                         AVEYRON           0.4338\n",
+      "12                BOUCHES DU RHONE           1.6332\n",
+      "13                        CALVADOS           0.9408\n",
+      "14                          CANTAL           1.0144\n",
+      "15                        CHARENTE           0.6308\n",
+      "16               CHARENTE MARITIME           1.1600\n",
+      "17                            CHER           1.0055\n",
+      "18                         CORREZE          -0.1585\n",
+      "19                       CORSE SUD           2.4876\n",
+      "20                     HAUTE CORSE           2.0144\n",
+      "21                       COTE D'OR           1.4657\n",
+      "22                   COTES D'ARMOR           0.1010\n",
+      "23                          CREUSE           0.2268\n",
+      "24                        DORDOGNE           0.3538\n",
+      "25                           DOUBS           1.3775\n",
+      "26                           DROME           1.3315\n",
+      "27                            EURE           1.8623\n",
+      "28                    EURE ET LOIR           1.8658\n",
+      "29                       FINISTERE          -0.0048\n",
       "..                             ...              ...\n",
-      "77                  SEINE ET MARNE           3.1368\n",
-      "78                        YVELINES           2.7010\n",
-      "79                     DEUX SEVRES           2.6506\n",
-      "80                           SOMME           3.4383\n",
-      "81                            TARN           2.9158\n",
-      "82                 TARN ET GARONNE           3.2582\n",
-      "83                             VAR           3.6977\n",
-      "84                        VAUCLUSE           3.6585\n",
-      "85                          VENDEE           2.8214\n",
-      "86                          VIENNE           2.8572\n",
-      "87                    HAUTE VIENNE           2.6391\n",
-      "88                          VOSGES           3.4499\n",
-      "89                           YONNE           3.4477\n",
-      "90           TERRITOIRE DE BELFORT           3.2941\n",
-      "91                         ESSONNE           2.7680\n",
-      "92                  HAUTS DE SEINE           2.3576\n",
-      "93               SEINE SAINT-DENIS           2.3183\n",
-      "94                    VAL DE MARNE           2.3400\n",
-      "95                      VAL D'OISE           2.8003\n",
-      "96                      GUADELOUPE           3.1229\n",
-      "97                      MARTINIQUE           2.8973\n",
-      "98                          GUYANE           2.9893\n",
-      "99                      LA REUNION           3.2170\n",
-      "100                        MAYOTTE           3.0741\n",
-      "101             NOUVELLE CALEDONIE           3.4489\n",
-      "102            POLYNESIE FRANCAISE           3.2953\n",
-      "103       SAINT PIERRE ET MIQUELON           2.1990\n",
-      "104               WALLIS-ET-FUTUNA           3.1844\n",
-      "105  SAINT-MARTIN/SAINT-BARTHELEMY           3.2027\n",
-      "106         FRANCAIS DE L'ETRANGER           2.3766\n",
+      "77                  SEINE ET MARNE           1.3805\n",
+      "78                        YVELINES           1.2201\n",
+      "79                     DEUX SEVRES           0.3934\n",
+      "80                           SOMME           1.5344\n",
+      "81                            TARN           0.7600\n",
+      "82                 TARN ET GARONNE           1.4275\n",
+      "83                             VAR           2.8352\n",
+      "84                        VAUCLUSE           2.2706\n",
+      "85                          VENDEE           1.5724\n",
+      "86                          VIENNE           0.6360\n",
+      "87                    HAUTE VIENNE          -0.0860\n",
+      "88                          VOSGES           1.9005\n",
+      "89                           YONNE           2.0076\n",
+      "90           TERRITOIRE DE BELFORT           1.5248\n",
+      "91                         ESSONNE           0.6899\n",
+      "92                  HAUTS DE SEINE           0.6147\n",
+      "93               SEINE SAINT-DENIS          -0.7574\n",
+      "94                    VAL DE MARNE           0.0167\n",
+      "95                      VAL D'OISE           0.6031\n",
+      "96                      GUADELOUPE          -1.0651\n",
+      "97                      MARTINIQUE          -0.8142\n",
+      "98                          GUYANE          -0.0078\n",
+      "99                      LA REUNION          -0.8593\n",
+      "100                        MAYOTTE           1.2772\n",
+      "101             NOUVELLE CALEDONIE           2.5757\n",
+      "102            POLYNESIE FRANCAISE           1.5591\n",
+      "103       SAINT PIERRE ET MIQUELON          -0.4435\n",
+      "104               WALLIS-ET-FUTUNA           0.2404\n",
+      "105  SAINT-MARTIN/SAINT-BARTHELEMY           1.9621\n",
+      "106         FRANCAIS DE L'ETRANGER           0.5981\n",
       "\n",
       "[107 rows x 2 columns]\n"
      ]
